# topomation

./: .cursorrules  .gitignore  BIDIRECTIONAL-SYNC-COMPLETE.md  CHANGELOG.md  IMPLEMENTATION-STATUS.md  LICENSE  Makefile  NEXT-STEPS.md  README.md  ha-topologyr.code-workspace  hacs.json  home-topology-ha.code-workspace  pyproject.toml  pytest.ini  topomation.code-workspace
.github/: copilot-instructions.md
.github/workflows/: auto-release.yml  frontend-tests.yml
custom_components/: __init__.py
custom_components/home_topology/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  event_bridge.py  manifest.json  panel.py  sensor.py  services.py  services.yaml  strings.json  sync_manager.py  websocket_api.py
custom_components/topomation/: __init__.py  actions_runtime.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  event_bridge.py  managed_actions.py  manifest.json  panel.py  sensor.py  services.py  services.yaml  strings.json  switch.py  sync_manager.py  system_health.py  topomation_ambient.py  websocket_api.py
docs/: TOPOMATION-INTEGRATION-REVIEW.md  adr-log.md  agent-quickstart.md  ambient-light-v1-design.md  architecture.md  automation-ui-guide.md  bidirectional-sync-design.md  coding-standards.md  contracts.md  current-work.md  cursor-guide.md  dependency-release-runbook.md  drag-drop-design-pattern.md  dusk-dawn-lighting-ui-spec.md  frontend-dev-workflow.md  frontend-quick-reference.md  frontend-testing-patterns.md  index.md  installation.md  integration-guide.md  lessons-learned-2025-12-28.md  lighting-behavior-mockups.md  lighting-ui-contract.md  live-ha-validation-checklist.md  live-release-testing-paradigm.md  mock-component-strategy.md  occupancy-lock-workflows.md  release-validation-runbook.md  setup-test-topology.md  touched-workflow-release-gate.md  tree-dnd-stabilization-plan.md  ui-design.md  v0.1.0-validation-sprint.md  wasp-in-box-implementation-plan.md  wasp-in-box-whitepaper.md  work-tracking.md  working-agreement.md
docs/history/: 2025.12.09-bidirectional-sync-complete.md  2025.12.09-completion-summary.md  2025.12.09-documentation-update-summary.md  2025.12.09-frontend-build-summary.md  2025.12.09-frontend-patterns-integration.md  2025.12.09-next-steps.md  2025.12.09-phase-2-completion-summary.md  2025.12.10-drag-drop-issues-and-fixes.md  2025.12.10-framework-implementation-summary.md  2025.12.10-implementation-plan.md  2025.12.10-implementation-roadmap-status.md  2025.12.10-implementation-summary.md  2025.12.10-phase-3-completion-summary.md  2025.12.10-phase-3-whats-new.md  2025.12.11-architectural-analysis-lit-sortable.md  2025.12.11-workflow-analysis.md  2025.12.12-frontend-fix-plan.md  2026.02.24-accessibility-checklist.md  2026.02.24-cleanup-pr-scope.md  2026.02.24-frontend-error-handling.md  2026.02.24-frontend-patterns.md  2026.02.24-frontend-state-management.md  2026.02.25-manual-occupancy-tree-controls.md
project/: .cursorrules-project  BASIC-LOCATION-MANAGER-PLAN.md  QUICK-START.md  README.md  roadmap.md
scripts/: check-docs-consistency.sh  check-docs-structure.sh  query-area-entities.py  setup-test-topology.py  test-comprehensive.sh  test-release-live.sh  verify-automation-creation.py  verify-automation-crud.py  verify-version-sync.py
tests/: .gitignore  2025.12.09-realworld-tests-summary.md  2025.12.09-wiim-improvements.md  BEFORE-AFTER.md  DEV-CONTAINER-HA.md  HA-BEST-PRACTICES.md  LIVE-TESTING-SUMMARY.md  OCCUPANCY-LIGHTING-MATRIX.md  QUICK-REFERENCE.md  QUICK-START-LIVE.md  README.md  REALWORLD-TESTS.md  RUN-AGAINST-HA.md  TEST-IMPROVEMENTS.md  WIIM-PATTERNS-REVIEW.md  conftest.py  docker-compose.test-ha.yml  ha-config.env.template  pytest-realworld.ini  run-live-tests.sh  test-ambient.py  test-bidirectional-sync.py  test-live-managed-actions-contract.py  test-realworld.py  test_actions_runtime.py  test_ambient_config_defaults.py  test_ambient_extra_lux_hook.py  test_binary_sensor.py  test_coordinator.py  test_event_bridge.py  test_init.py  test_lock_services_integration.py  test_managed_action_config_build_matrix.py  test_managed_actions.py  test_managed_lighting_automation_runtime.py  test_managed_shadow_occupancy_invariant.py  test_occupancy_timeout_semantics.py  test_panel.py  test_persistence.py  test_services.py  (+6 more)
(+120 files in other folders)
