[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topomation"
version = "0.1.13"
description = "Home Assistant integration for Topomation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Michael Cumming", email = "mike@4831.com"}
]
keywords = ["homeassistant", "topomation", "occupancy", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "home-topology==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=1.0",
    "pytest-homeassistant-custom-component>=0.13.316",
    "home-assistant-frontend",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/mjcumming/topomation"
Documentation = "https://github.com/mjcumming/topomation/blob/main/README.md"
Repository = "https://github.com/mjcumming/topomation"
Issues = "https://github.com/mjcumming/topomation/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components", "custom_components.*"]
exclude = ["tests*", "project*", "docs*", "blueprints*", "build*", "htmlcov*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",    # Use of assert (ok in tests)
    "ANN401",  # Allow Any where HA/event payload typing is dynamic
    "E501",    # Keep existing long literals/fixtures without forcing wraps
    "RUF100",  # Allow existing targeted noqa markers
    "B009",    # Allow getattr(...) compatibility-style access
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN",
    "I001",
    "DTZ005",
    "F401",
    "F841",
    "B007",
    "E402",
]  # Keep test suite focused on behavior over style churn

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # HA uses many untyped decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disable_error_code = [
    "attr-defined",
    "arg-type",
    "misc",
    "no-any-return",
    "unreachable",
    "valid-type",
    "var-annotated",
]  # HA runtime data is heavily dynamic; keep mypy signal without blocking release on dynamic-boundary noise

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "custom_card_helpers"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "home_topology.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = """
    --strict-markers
    --cov=custom_components/topomation
    --cov-report=term-missing
    --cov-report=html
"""

[tool.coverage.run]
source = ["custom_components/topomation"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]
